2007-10-29 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by <ladyada@gmail.com>:
	Patch #6233: Add support for USBtinyISP programmer
	* usbtiny.c: New file.
	* usbtiny.h: (Ditto.)
	* Makefile.am: Include usbtiny into the build.
	* avrdude.conf.in: (Ditto.)
	* config_gram.y: (Ditto.)
	* lexer.l: (Ditto.)
	* avrdude.1: Document the usbtiny support.
	* doc/avrdude.texi: (Ditto.)

2007-10-29 Joerg Wunsch <j@uriah.heep.sax.de>

	* doc/avrdude.texi: Sort list of supported programmers into
	alphabetical order, add all missing programmers.

2007-07-24 Thomas Fischl <tfischl@gmx.de>

	* usbasp.c: Added long addresses to support devices with more
        than 64kB flash. Closes bug #20558: Long address problem with
        USBasp.

2007-06-27 Joerg Wunsch <j@uriah.heep.sax.de>

	* Makefile.am (EXTRA_DIST): Add ChangeLog-2004-2006.

2007-05-16 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version for post-release.

2007-05-16 Joerg Wunsch <j@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version, releasing avrdude-5.4.

2007-05-16 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix AVR910 devcodes.  It seems that the AVR109
	listing refers to "BOOT"-type code, while the standard codes are
	different (usually one below).

2007-05-16 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr.c (avr_read, avr_write): only use the paged_load and
	paged_write backend functions iff the memory area in question has
	a page_size != 0.
	This is supposed to fix bug #19234: avrdude-5.3.1 segfaults when
	stk500v1 tries to program an ATtiny15

2007-05-15 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr910.c: Fall back to avr_{read,write}_byte_default().  Fixes
	bug #18803: Fuse reading regression in avrdude 5.3.1 with avr910
	programmer

2007-05-15 Colin O'Flynn <coflynn@newae.com>

	* avrdude.conf.in: Rename the ATmega164 and ATmega324 into
	ATmega164P and ATmega324P, resp.  Add an entry for the ATmega644P.
	Fixes bug #19769: ATmega164p not recognized
